fixed button overlap with footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -128,6 +128,7 @@ footer{
     background-color: #262320;
     text-align: center;
     padding: 1em 0;
+    z-index: 100;
 }
 
 #footer_text{
